all problem fiexd

--- a/about.html
+++ b/about.html
@@ -258,80 +258,95 @@
                         </div>
                     </div>
                 </div>
-                <div class="team-content mt-4">
-                    <div class="row">
-                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
+                <div class="team-content my-4">
+                    <div class="swiper teamSlider">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="team-card">
+                                    <img src="assets/img/team.png" alt="" class="member-img">
+                                    <div class="team-info">
+                                        <a href="" class="name">MIchael jackson</a>
+                                        <p>CEO</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
+                            <div class="swiper-slide">
+                                <div class="team-card">
+                                    <img src="assets/img/team.png" alt="" class="member-img">
+                                    <div class="team-info">
+                                        <a href="" class="name">MIchael jackson</a>
+                                        <p>CEO</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
+                            <div class="swiper-slide">
+                                <div class="team-card">
+                                    <img src="assets/img/team.png" alt="" class="member-img">
+                                    <div class="team-info">
+                                        <a href="" class="name">MIchael jackson</a>
+                                        <p>CEO</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
+                            <div class="swiper-slide">
+                                <div class="team-card">
+                                    <img src="assets/img/team.png" alt="" class="member-img">
+                                    <div class="team-info">
+                                        <a href="" class="name">MIchael jackson</a>
+                                        <p>CEO</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
+                            <div class="swiper-slide">
+                                <div class="team-card">
+                                    <img src="assets/img/team.png" alt="" class="member-img">
+                                    <div class="team-info">
+                                        <a href="" class="name">MIchael jackson</a>
+                                        <p>CEO</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
+                            <div class="swiper-slide">
+                                <div class="team-card">
+                                    <img src="assets/img/team.png" alt="" class="member-img">
+                                    <div class="team-info">
+                                        <a href="" class="name">MIchael jackson</a>
+                                        <p>CEO</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
+                            <div class="swiper-slide">
+                                <div class="team-card">
+                                    <img src="assets/img/team.png" alt="" class="member-img">
+                                    <div class="team-info">
+                                        <a href="" class="name">MIchael jackson</a>
+                                        <p>CEO</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                            <div class="team-card">
-                                <img src="assets/img/team.png" alt="" class="member-img">
-                                <div class="team-info">
-                                    <a href="" class="name">MIchael jackson</a>
-                                    <p>CEO</p>
+                            <div class="swiper-slide">
+                                <div class="team-card">
+                                    <img src="assets/img/team.png" alt="" class="member-img">
+                                    <div class="team-info">
+                                        <a href="" class="name">MIchael jackson</a>
+                                        <p>CEO</p>
+                                    </div>
                                 </div>
                             </div>
+
+
+                            <!-- <div class="swiper-slide">Slide 1</div>
+                            <div class="swiper-slide">Slide 2</div>
+                            <div class="swiper-slide">Slide 3</div>
+                            <div class="swiper-slide">Slide 4</div>
+                            <div class="swiper-slide">Slide 5</div>
+                            <div class="swiper-slide">Slide 6</div>
+                            <div class="swiper-slide">Slide 7</div>
+                            <div class="swiper-slide">Slide 8</div>
+                            <div class="swiper-slide">Slide 9</div> -->
+
                         </div>
+                        <div class="swiper-pagination"></div>
                     </div>
                 </div>
             </div>
@@ -615,6 +630,7 @@
         </footer>
         <!-- ====================FOOTER AREA END============ -->
     </div>
+
     <!-- ==========body wrapper end=========== -->
 
 
