--- a/index.html
+++ b/index.html
@@ -189,37 +189,58 @@
                                                 <div class="col-6 col-sm-3">
                                                     <div class="box">
                                                         <label>Merk</label>
-                                                        <select class="wide border-padding-less cs-arrow">
-                                                          <option selected>Alle merken</option>
-                                                          <option value="1">Some option</option>
-                                                          <option value="2">Another option</option>
-                                                          <option value="3">A disabled option</option>
-                                                          <option value="4">Potato</option>
-                                                        </select>
+                                                        <div class="dropdown filter-dp-manu">
+                                                            <button class="dropdown-toggle filter-dp p-0">
+                                                                Alle merken
+                                                            </button>
+                                                            <ul class="filter-menu ">
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+
+                                                            </ul>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-6 col-sm-3 se-border">
                                                     <div class="box">
                                                         <label>Model</label>
-                                                        <select class="wide border-padding-less cs-arrow">
-                                                          <option selected>Alle merken</option>
-                                                          <option value="1">Some option</option>
-                                                          <option value="2">Another option</option>
-                                                          <option value="3">A disabled option</option>
-                                                          <option value="4">Potato</option>
-                                                        </select>
+                                                        <div class="dropdown filter-dp-manu">
+                                                            <button class="dropdown-toggle filter-dp p-0">
+                                                                Alle merken
+                                                            </button>
+                                                            <ul class="filter-menu ">
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+
+                                                            </ul>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-6 col-sm-3">
                                                     <div class="box">
                                                         <label>Transmissie</label>
-                                                        <select class="wide border-padding-less cs-arrow">
-                                                          <option selected>Alle merken</option>
-                                                          <option value="1">Some option</option>
-                                                          <option value="2">Another option</option>
-                                                          <option value="3">A disabled option</option>
-                                                          <option value="4">Potato</option>
-                                                        </select>
+                                                        <div class="dropdown filter-dp-manu">
+                                                            <button class="dropdown-toggle filter-dp p-0">
+                                                                Alle merken
+                                                            </button>
+                                                            <ul class="filter-menu ">
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+
+                                                            </ul>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-6 col-sm-3">
@@ -234,37 +255,58 @@
                                                 <div class="col-6 col-sm-3">
                                                     <div class="box">
                                                         <label>Merk</label>
-                                                        <select class="wide border-padding-less cs-arrow">
-                                                          <option selected>Alle merken</option>
-                                                          <option value="1">Some option</option>
-                                                          <option value="2">Another option</option>
-                                                          <option value="3">A disabled option</option>
-                                                          <option value="4">Potato</option>
-                                                        </select>
+                                                        <div class="dropdown filter-dp-manu">
+                                                            <button class="dropdown-toggle filter-dp p-0">
+                                                                Alle merken
+                                                            </button>
+                                                            <ul class="filter-menu ">
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+
+                                                            </ul>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-6 col-sm-3 se-border">
                                                     <div class="box">
                                                         <label>Model</label>
-                                                        <select class="wide border-padding-less cs-arrow">
-                                                          <option selected>Alle merken</option>
-                                                          <option value="1">Some option</option>
-                                                          <option value="2">Another option</option>
-                                                          <option value="3">A disabled option</option>
-                                                          <option value="4">Potato</option>
-                                                        </select>
+                                                        <div class="dropdown filter-dp-manu">
+                                                            <button class="dropdown-toggle filter-dp p-0">
+                                                                Alle merken
+                                                            </button>
+                                                            <ul class="filter-menu ">
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+
+                                                            </ul>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-6 col-sm-3">
                                                     <div class="box">
                                                         <label>Transmissie</label>
-                                                        <select class="wide border-padding-less cs-arrow">
-                                                          <option selected>Alle merken</option>
-                                                          <option value="1">Some option</option>
-                                                          <option value="2">Another option</option>
-                                                          <option value="3">A disabled option</option>
-                                                          <option value="4">Potato</option>
-                                                        </select>
+                                                        <div class="dropdown filter-dp-manu">
+                                                            <button class="dropdown-toggle filter-dp p-0">
+                                                                Alle merken
+                                                            </button>
+                                                            <ul class="filter-menu ">
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+                                                                <li> <a href="" class="filter-t-link">Alle merken</a> </li>
+
+                                                            </ul>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-6 col-sm-3">
