3 problem fiexd 2nd revision

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                                             <button class="dropdown-toggle filter-dp p-0">
                                                                 Alle merken
                                                             </button>
-                                                            <ul class="filter-menu ">
+                                                            <ul class="filter-menu hero-filter">
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
@@ -212,7 +212,7 @@
                                                             <button class="dropdown-toggle filter-dp p-0">
                                                                 Alle merken
                                                             </button>
-                                                            <ul class="filter-menu ">
+                                                            <ul class="filter-menu hero-filter">
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
@@ -231,7 +231,7 @@
                                                             <button class="dropdown-toggle filter-dp p-0">
                                                                 Alle merken
                                                             </button>
-                                                            <ul class="filter-menu ">
+                                                            <ul class="filter-menu hero-filter">
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
@@ -259,7 +259,7 @@
                                                             <button class="dropdown-toggle filter-dp p-0">
                                                                 Alle merken
                                                             </button>
-                                                            <ul class="filter-menu ">
+                                                            <ul class="filter-menu hero-filter">
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
@@ -278,7 +278,7 @@
                                                             <button class="dropdown-toggle filter-dp p-0">
                                                                 Alle merken
                                                             </button>
-                                                            <ul class="filter-menu ">
+                                                            <ul class="filter-menu hero-filter">
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
@@ -297,7 +297,7 @@
                                                             <button class="dropdown-toggle filter-dp p-0">
                                                                 Alle merken
                                                             </button>
-                                                            <ul class="filter-menu ">
+                                                            <ul class="filter-menu hero-filter">
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
                                                                 <li> <a href="" class="filter-t-link">Alle merken</a> </li>
@@ -1260,10 +1260,21 @@
                                         <div class="social">
                                             <ul>
                                                 <li>
-                                                    <a href="" class="social-link"><img src="assets/img/icon/facebook.svg" alt=""></a>
+                                                    <a href="" class="social-link">
+                                                        <svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M8.08894 12.5763H10.7159L11.7667 8.37312H8.08894V6.27154C8.08894 5.18922 8.08894 4.16996 10.1905 4.16996H11.7667V0.639298C11.4241 0.594114 10.1306 0.492188 8.76459 0.492188C5.9117 0.492188 3.88577 2.23335 3.88577 5.43091V8.37312H0.733398V12.5763H3.88577V21.508H8.08894V12.5763Z" fill="#B12028"/>
+                                                        </svg>
+                                                    </a>
                                                 </li>
                                                 <li>
-                                                    <a href="" class="social-link"><img src="assets/img/icon/insta.svg" alt=""></a>
+                                                    <a href="" class="social-link">
+                                                        <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M16.1174 6.65178C16.8138 6.65178 17.3783 6.08723 17.3783 5.39083C17.3783 4.69443 16.8138 4.12988 16.1174 4.12988C15.421 4.12988 14.8564 4.69443 14.8564 5.39083C14.8564 6.08723 15.421 6.65178 16.1174 6.65178Z" fill="#B12028"/>
+                                                            <path d="M10.5076 5.604C9.44044 5.604 8.39722 5.92046 7.50988 6.51336C6.62254 7.10626 5.93095 7.94897 5.52255 8.93493C5.11415 9.92088 5.0073 11.0058 5.2155 12.0525C5.4237 13.0992 5.9376 14.0606 6.69222 14.8152C7.44683 15.5698 8.40828 16.0837 9.45496 16.2919C10.5016 16.5001 11.5866 16.3933 12.5725 15.9849C13.5585 15.5765 14.4012 14.8849 14.9941 13.9976C15.587 13.1102 15.9034 12.067 15.9034 10.9998C15.9034 9.56876 15.335 8.19631 14.323 7.1844C13.3111 6.17249 11.9387 5.604 10.5076 5.604ZM10.5076 14.5025C9.81488 14.5025 9.13768 14.297 8.56167 13.9122C7.98566 13.5273 7.53672 12.9802 7.27162 12.3402C7.00651 11.7002 6.93715 10.9959 7.0723 10.3165C7.20745 9.63704 7.54104 9.01293 8.03089 8.52308C8.52075 8.03322 9.14486 7.69963 9.8243 7.56448C10.5037 7.42933 11.208 7.49869 11.848 7.7638C12.4881 8.02891 13.0351 8.47785 13.42 9.05386C13.8048 9.62986 14.0103 10.3071 14.0103 10.9998C14.0103 11.9288 13.6412 12.8197 12.9844 13.4766C12.3275 14.1334 11.4366 14.5025 10.5076 14.5025Z" fill="#B12028"/>
+                                                            <path d="M10.5079 2.38536C13.3135 2.38536 13.6463 2.39587 14.754 2.44666C15.4202 2.45457 16.0801 2.5769 16.705 2.80831C17.1582 2.98317 17.5699 3.25099 17.9135 3.59454C18.257 3.93809 18.5248 4.34976 18.6997 4.80306C18.9311 5.42787 19.0534 6.08779 19.0613 6.75403C19.1121 7.86174 19.1226 8.19449 19.1226 11.001C19.1226 13.8075 19.1121 14.1385 19.0613 15.2462C19.0534 15.9124 18.9311 16.5723 18.6997 17.1971C18.5248 17.6504 18.257 18.0621 17.9135 18.4057C17.5699 18.7492 17.1582 19.017 16.705 19.1919C16.0801 19.4233 15.4202 19.5456 14.754 19.5535C13.6463 19.6043 13.3135 19.6148 10.5079 19.6148C7.7023 19.6148 7.36955 19.6043 6.26184 19.5535C5.5956 19.5456 4.93568 19.4233 4.31087 19.1919C3.85757 19.017 3.44591 18.7492 3.10235 18.4057C2.7588 18.0621 2.49098 17.6504 2.31612 17.1971C2.08471 16.5723 1.96238 15.9124 1.95447 15.2462C1.90368 14.1385 1.89318 13.8057 1.89318 11.0001C1.89318 8.19449 1.90368 7.86174 1.95447 6.75403C1.96238 6.08779 2.08471 5.42787 2.31612 4.80306C2.49098 4.34976 2.7588 3.93809 3.10235 3.59454C3.44591 3.25099 3.85757 2.98317 4.31087 2.80831C4.93568 2.5769 5.5956 2.45457 6.26184 2.44666C7.36955 2.39587 7.7023 2.38536 10.5079 2.38536ZM10.5079 0.492188C7.65414 0.492188 7.29599 0.504447 6.17515 0.555235C5.30367 0.572832 4.44148 0.738046 3.62523 1.04385C2.92709 1.31382 2.29305 1.72667 1.76377 2.25596C1.23448 2.78524 0.821629 3.41927 0.551665 4.11742C0.245761 4.93395 0.0805461 5.79644 0.0630475 6.66821C0.0122593 7.78906 0 8.14545 0 11.0001C0 13.8547 0.0122593 14.212 0.0630475 15.3329C0.0806448 16.2043 0.245858 17.0665 0.551665 17.8828C0.821629 18.5809 1.23448 19.215 1.76377 19.7442C2.29305 20.2735 2.92709 20.6864 3.62523 20.9563C4.44176 21.2622 5.30425 21.4275 6.17602 21.445C7.29687 21.4957 7.65414 21.508 10.5079 21.508C13.3617 21.508 13.7198 21.4957 14.8407 21.445C15.7124 21.4275 16.5749 21.2622 17.3915 20.9563C18.0896 20.6864 18.7236 20.2735 19.2529 19.7442C19.7822 19.215 20.1951 18.5809 20.465 17.8828C20.7706 17.0662 20.9356 16.2037 20.9528 15.332C21.0036 14.2111 21.0158 13.8547 21.0158 11.0001C21.0158 8.14545 21.0036 7.78818 20.9528 6.66734C20.9352 5.79586 20.77 4.93367 20.4642 4.11742C20.1942 3.41927 19.7813 2.78524 19.2521 2.25596C18.7228 1.72667 18.0887 1.31382 17.3906 1.04385C16.574 0.738248 15.7115 0.573329 14.8398 0.556111C13.719 0.503571 13.3626 0.492188 10.5079 0.492188Z" fill="#B12028"/>
+                                                            </svg>
+
+                                                    </a>
                                                 </li>
                                             </ul>
                                         </div>
