--- a/occasion.html
+++ b/occasion.html
@@ -434,7 +434,7 @@
                                         <div class="swiper-pagination"></div>
                                     </div>
                                     <div class="car-stiker">
-                                        <p class="bg-salomie">Verkocht</p>
+                                        <p class="bg-salomie">Nieuw binnen</p>
                                     </div>
                                     <div class="service-details">
                                         <div class="card-block">
